--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <html>
 <head>
 	<meta charset='utf-8'>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles/font-awesome/css/font-awesome.min.css">
+	<title>Wizard</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">	
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body ng-app="myapp" class="container">
 
@@ -18,7 +19,10 @@
 		</wizard-step>
 	</wizard>
 
-<script src="/scripts/angular.js"></script>
+<script src="/scripts/angular.min.js"></script>
+<script src="/scripts/ui-bootstrap.min.js"></script>
+<script src="/scripts/ui-bootstrap-tpls.min.js"></script>
+<script src="/scripts/angular-animate.min.js"></script>
 <script src="/app/app.js"></script>
 <script src="/app/wizard/wizardDirective.js"></script>
 </body>
