--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,47 @@
 </head>
 <body class="container" ng-controller="HelloController">
 
-	<wizard current-step-number="uiState.currentStepNumber" submit="onSubmit()">
+	<wizard current-step-number="uiState.currentStepNumber" submit="onSubmit()" >
+		
 		<wizard-step title="Settings" title-class="fa fa-cog">
-		<div>STEP1</div>
-		<input type="text" ng-model="requiredText" required placeholder="Required Field" />
+		
+			<div class="form-group">
+				<label class="control-label" for="data-input-type">What type of data would you like to import?</label>
+				<select class="form-control" id="data-input-type">
+					<option>LAFHA Benefits</option>
+				</select>
+			</div>
+			<div class="form-group">
+				<label class="control-label">Where would you like to import this data?</label>
+				<div class="form-group">
+				<select class="form-control" id="period">
+					<option>2014-2015</option>
+				</select>
+				</div>
+				<div class="form-group">
+					<select class="form-control" id="organization">
+						<option>Thomson Reuters</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<select class="form-control" id="reporting-entity">
+						<option>01 - No exemption</option>
+					</select>
+				</div>
+			</div>
+			
+			
+			
 		</wizard-step>
+
 		<wizard-step title="Map Columns" title-class="fa fa-random" required-step-number="0">
-		<div>STEP2</div>
-		<input type="text" ng-model="requiredText" required placeholder="Required Field" />
+			
 		</wizard-step>
+
 		<wizard-step title="Import" title-class="fa fa-download">		
-		<div>STEP3</div>
+			<div>STEP3</div>
 		</wizard-step>
+
 	</wizard>
 
 <script src="/scripts/angular.min.js"></script>
