--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,8 @@
 <script src="/scripts/ui-bootstrap-tpls.min.js"></script>
 <script src="/scripts/angular-animate.min.js"></script>
 <script src="/app/app.js"></script>
+<script src="/templates/wizard/wizardStepTemplate.js"></script>
+<script src="/templates/wizard/wizardTemplate.js"></script>
 <script src="/app/wizard/wizardDirective.js"></script>
 </body>
 </html>
